The dumbest service worker that could work. Still needs TypeKit and uh maybe a fix for the huge venue responsive image? Also it probably caches way too much.

--- a/_includes/theme.css
+++ b/_includes/theme.css
@@ -786,7 +786,7 @@ a[href].speaker.speaker:hover:after {
 
 .page-countdown {
 	background-color: #000;
-	background-image: url(/assets/img/countdown.jpg);
+	background-image: url({{ "/assets/img/countdown.jpg" | url }});
 	background-size: cover;
 	display: flex;
 	flex-direction: column;
